GetFirstExecutor example